--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -377,16 +377,16 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/facebook_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
                 alt="Facebook λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/twitter_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
                 alt="Twitter λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/instagram_new.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
                 alt="Instagram λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/youtube_logo.png" width="50" height="50"
+        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
                 alt="Youtube λογότυπο"></a>
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise2/index.html"><img class="image" src="/assets/Technodata-logos_cropped_footer.png" width="170"
+        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170"
                 height="50" alt="Tecnhodata λογότυπο"></a>
     </footer>
 </body>
