--- a/Exercise2/products-pcs.html
+++ b/Exercise2/products-pcs.html
@@ -11,12 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
     <link rel="stylesheet" href="/Exercise2/css/products-pcs.css">
-
 </head>
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -28,27 +26,26 @@
             <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
         </nav>
-
     </header>
-
-
 
     <main class="main-content">
         <div id="page-title">
             <h2>Ηλεκτρονικοί Υπολογιστές</h2>
+
             <p>6 προϊόντα</p>
         </div>
 
         <section id="products">
             <ul>
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs0.png" width="180" height="110" alt="">
+
                         <h2>Apple MacBook Pro Ultrabook Space Gray</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 457126 <br>
                         2021, 16.2" 3456x2234 Retina Display, M1-Max, 32GB, 1TB SSD, GR Keyboard.
                     </p>
@@ -63,14 +60,14 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs1.png" width="200" height="200" alt="">
 
                         <h2>Huawei MateBook D15 Ultrabook</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 461398<br>
                         2021, 15.6" 1920x1080 IPS, i3 10110U, 8GB, 265GB SSD, EN Keyboard.
                     </p>
@@ -86,14 +83,14 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs2.png" width="200" height="200" alt="">
 
                         <h2>Apple iMac All-in-One PC Silver</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 364521 <br>
                         2021, 24" 4480x2520 Retina Display, M1, 8GB, 256GB SSD, EN Keyboard.
                     </p>
@@ -109,13 +106,14 @@
                 </li>
 
                 <li class="product-card">
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs3.png" width="200" height="200" alt="">
 
                         <h2>MSI Intel Gaming Desktop PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 957614 <br>
                         2021, i5-10400F, 16GB DDR4, 240GB SSD, 500GB HDD, GeForce RTX 3060.
                     </p>
@@ -131,14 +129,14 @@
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs4.png" width="200" height="200" alt="">
 
                         <h2>Apple Mac Mini PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 481267 <br>
                         2020, M1, 8GB, 512GB SSD.
                     </p>
@@ -148,21 +146,19 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 4,0/5 αστέρια (357)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-pcs.html">
                         <img src="/assets/pcs5.png" width="200" height="200" alt="">
 
                         <h2>MSI Cubi N Mini PC</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 657816 <br>
                         2019, N4500, 4GB, 128GB SSD.
                     </p>
@@ -172,7 +168,6 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 3,5/5 αστέρια (6)</p>
                     </div>
                 </li>
@@ -182,17 +177,28 @@
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
-                alt="Facebook λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
-                alt="Twitter λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
-                alt="Instagram λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
-                alt="Youtube λογότυπο"></a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+        </a>
+
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
-                alt="Tecnhodata λογότυπο"></a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+        </a>
     </footer>
 </body>
 
