--- a/Exercise2/products-phones.html
+++ b/Exercise2/products-phones.html
@@ -11,12 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
     <link rel="stylesheet" href="/Exercise2/css/products-phones.css">
-
 </head>
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -27,29 +25,27 @@
             <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
             <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-
         </nav>
-
     </header>
-
-
 
     <main class="main-content">
         <div id="page-title">
             <h2>Κινητά Τηλέφωνα</h2>
+
             <p>6 προϊόντα</p>
         </div>
 
         <section id="products">
             <ul>
                 <li class="product-card">
-
-
                     <a href="/Exercise2/product-iphone14-pro-max.html">
                         <img src="/assets/iphone14pro.png" width="350" height="350" alt="Apple iPhone 14 Pro Max">
+
                         <h2>Apple iPhone 14 Pro Max 5G</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 267271 <br>
                         2022, 6.7'' Super Retina XDR Display, A16 Bionic Chip, 6GB RAM, 128GB storage, 48MP/12MP
                         ultrawide
@@ -61,19 +57,18 @@
 
                     <div class="reviews">
                         <p>Βαθμολογία: 4,8/5 αστέρια (543)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-phones.html">
                         <img src="/assets/samsungs22.png" width="350" height="350" alt="Samsung S22">
 
                         <h2>Samsung S22 5G</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 262958<br>
                         2022, 6.1'' AMOLED 2X, Exynos 2200 Chip, 8GB RAM, 128GB storage, 50MP/10MP selfie
                     </p>
@@ -83,21 +78,19 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 4,8/5 αστέρια (764)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-phones.html">
                         <img src="/assets/xiaomi.png" width="350" height="350" alt="Xiaomi 12T Pro">
 
                         <h2>Xiaomi 12T Pro 5G</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 262792<br>
                         2022, 6.67'' AMOLED, Snapdragon 8 Chip, 12GB RAM, 2586GB stograge, 200MP/8MP ultrawide
                     </p>
@@ -107,21 +100,19 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 4,5/5 αστέρια (1156)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-phones.html">
                         <img src="/assets/iphone_old.png" width="350" height="350" alt="Apple iPhone 11">
 
                         <h2>Apple iPhone 11</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 262921<br>
                         2019, 6.1'' Retina IPS, A13 Bionic Chip, 4GB RAM, 64GB storage, 12MP/12MP ultrawide
                     </p>
@@ -132,19 +123,18 @@
 
                     <div class="reviews">
                         <p>Βαθμολογία: 4,4/5 αστέρια (725)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
-
                     <a href="/Exercise2/products-phones.html">
                         <img src="/assets/samsung_old.png" width="220" height="350" alt="Samsung S10 Ultra">
 
                         <h2>Samsung S10 Ultra 5G</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 185921<br>
                         2019, 6.7'' Dynamic AMOLED, Exynos 9820 Chip, 8GB RAM, 256GB storage, 12MP/16MP ultrawide
                     </p>
@@ -154,20 +144,19 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 4,6/5 αστέρια (532)</p>
-
                     </div>
                 </li>
 
                 <li class="product-card">
-
                     <a href="/Exercise2/products-phones.html">
                         <img src="/assets/xiaomi_note9.png" width="350" height="350" alt="Xiaomi Note 9 Pro">
 
                         <h2>Xiaomi Note 9 Pro</h2>
                     </a>
+
                     <button title="Προσθήκη στα αγαπημένα."> Προσθήκη στα αγαπημένα</button>
+
                     <p class="code-descr">Κωδικός προϊόντος: 183021<br>
                         2020, 6.67'' IPS, Snapdragon 720G, 6GB RAM, 128GB storage, 64MP/8MP ultrawide
                     </p>
@@ -177,27 +166,37 @@
                     </div>
 
                     <div class="reviews">
-
                         <p>Βαθμολογία: 4,3/5 αστέρια (1675)</p>
-
                     </div>
                 </li>
             </ul>
         </section>
     </main>
+
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
-                alt="Facebook λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
-                alt="Twitter λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
-                alt="Instagram λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
-                alt="Youtube λογότυπο"></a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+        </a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+        </a>
+
         <h4>©2022 Techodata Computers</h4>
+
         <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
-                alt="Tecnhodata λογότυπο"></a>
+                alt="Tecnhodata λογότυπο">
+        </a>
     </footer>
 </body>
 
