--- a/Exercise2/product-categories.html
+++ b/Exercise2/product-categories.html
@@ -11,12 +11,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
     <link rel="stylesheet" href="/Exercise2/css/product-categories.css">
-
 </head>
 
 <body>
     <header class="header-light-color">
-
         <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                 alt="Technodata λογότυτπο"></a>
 
@@ -27,42 +25,35 @@
             <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
             <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
             <a href="/Exercise2/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-
         </nav>
-
     </header>
 
     <main class="main-content">
-
         <h1>Τα προϊόντα μας</h1>
+
         <section class="subcategory">
-            <!-- ΝΑ ΒΑΛΟΥΜΕ ΚΑΙ ΣΤΟ UL CLASS???-->
             <h2>Τεχνολογία</h2>
+
             <ul>
                 <li class="category-card">
                     <a href="/Exercise2/products-phones.html">
                         <img class="image" src="/assets/phones.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κινητών τηλεφώνων">
 
-
                         <h3 class="category-name">Κινητή Τηλεφωνία</h3>
                     </a>
                 </li>
-
 
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/tablets.png" width="200" height="200"
                             alt="εικόνα κατηγορίας tablet">
 
-
                         <h3 class="category-name">
                             Tablet
                         </h3>
                     </a>
                 </li>
-
-
 
                 <li class="category-card">
                     <a href="/Exercise2/products-pcs.html">
@@ -74,8 +65,6 @@
                         </h3>
                     </a>
                 </li>
-
-
 
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
@@ -89,8 +78,6 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/sound.png" width="200" height="200"
@@ -103,33 +90,27 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/consoles.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ήχου">
-
 
                         <h3 class="category-name">
                             Κονσόλες
                         </h3>
                     </a>
                 </li>
-
             </ul>
-
         </section>
 
         <section class="subcategory">
             <h2>Σπίτι</h2>
-            <ul>
 
+            <ul>
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/fridges.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ψυγείων">
-
 
                         <h3 class="category-name">
                             Ψυγεία
@@ -137,13 +118,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/ovens.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
-
 
                         <h3 class="category-name">
                             Κουζίνες
@@ -151,13 +129,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/absorbers.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
-
 
                         <h3 class="category-name">
                             Απορροφητήρες
@@ -165,13 +140,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/dishwashers.png" width="200" height="200"
                             alt="εικόνα κατηγορίας πληντύριων πιάτων">
-
 
                         <h3 class="category-name">
                             Πλυντήρια Πιάτων
@@ -179,12 +151,9 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
-
 
                         <h3 class="category-name">
                             Σκούπες
@@ -192,33 +161,27 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/washing-machines.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
-
 
                         <h3 class="category-name">
                             Πληντύρια Ρούχων
                         </h3>
                     </a>
                 </li>
-
             </ul>
-
         </section>
 
         <section class="subcategory">
             <h2>Αυτοκίνητο - Μηχανή</h2>
-            <ul>
 
+            <ul>
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/gps.png" width="200" height="200"
                             alt="εικόνα κατηγορίας ψυγείων">
-
 
                         <h3 class="category-name">
                             GPS
@@ -226,13 +189,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/alarms.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
-
 
                         <h3 class="category-name">
                             Συναγερμοί
@@ -240,13 +200,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/reverse-cameras.png" width="200" height="200"
                             alt="εικόνα κατηγορίας κουζινών">
-
 
                         <h3 class="category-name">
                             Κάμερες Οπισθοπορείας
@@ -254,13 +211,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/parking-sensors.png" width="200" height="200"
                             alt="εικόνα κατηγορίας πληντύριων πιάτων">
-
 
                         <h3 class="category-name">
                             Αισθητήρες Παρκαρίσματος
@@ -268,13 +222,10 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/car-lighting.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
-
 
                         <h3 class="category-name">
                             Φωτισμός
@@ -282,31 +233,23 @@
                     </a>
                 </li>
 
-
-
                 <li class="category-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/car-accessories.png" width="200" height="200"
                             alt="εικόνα κατηγορίας">
-
 
                         <h3 class="category-name">
                             Αξεσουάρ
                         </h3>
                     </a>
                 </li>
-
             </ul>
-
         </section>
-
-
-
 
         <section class="popular-products">
             <h2>Δημοφιλή προϊόντα</h2>
-            <ul>
 
+            <ul>
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/popular0.png" width="200" height="200" alt="">
@@ -315,8 +258,6 @@
                         <p class="price">865,70€</p>
                     </a>
                 </li>
-
-
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
@@ -327,8 +268,6 @@
                     </a>
                 </li>
 
-
-
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/popular2.png" width="200" height="200" alt="">
@@ -337,8 +276,6 @@
                         <p class="price">849,00€</p>
                     </a>
                 </li>
-
-
 
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
@@ -349,8 +286,6 @@
                     </a>
                 </li>
 
-
-
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/popular4.png" width="200" height="200" alt="">
@@ -360,8 +295,6 @@
                     </a>
                 </li>
 
-
-
                 <li class="product-card">
                     <a href="/Exercise2/product-categories.html">
                         <img class="image" src="/assets/popular5.png" width="200" height="200" alt="">
@@ -370,24 +303,31 @@
                         <p class="price">1.630,00€</p>
                     </a>
                 </li>
-
             </ul>
         </section>
     </main>
 
     <footer class="footer-content">
         <h4>Βρείτε μας στα ακόλουθα social media</h4> <!-- ΙΣΩΣ ΒΑΛΟΥΜΕ ΚΛΑΣΣ ΣΤΟ Η4 ΜΟΝΟ ΤΟΥ Η ΣΤΑ ΥΠΟΛΟΙΠΑ-->
-        <a href="/Exercise2/index.html"><img src="/assets/facebook_logo.png" width="50" height="50"
-                alt="Facebook λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/twitter_logo.png" width="50" height="50"
-                alt="Twitter λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/instagram_new.png" width="50" height="50"
-                alt="Instagram λογότυπο"></a>
-        <a href="/Exercise2/index.html"><img src="/assets/youtube_logo.png" width="50" height="50"
-                alt="Youtube λογότυπο"></a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
+        </a>
+        <a href="/Exercise2/index.html">
+            <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
+        </a>
+        <a href="/Exercise2/index.html">
+            <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
+        </a>
+        <a href="/Exercise2/index.html">
+            <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
+        </a>
+
         <h4>©2022 Techodata Computers</h4>
-        <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_cropped_footer.png" width="170"
-                height="50" alt="Tecnhodata λογότυπο"></a>
+
+        <a href="/Exercise2/index.html">
+            <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+        </a>
     </footer>
 </body>
 
